did some checking on lighthouse, fixed some stuff

--- a/static/games.html
+++ b/static/games.html
@@ -285,6 +285,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 imgSrc: "gameimg/bitlife.png",
                 link: __uv$config.prefix + __uv$config.encodeUrl("https://ubg365.github.io/bitlife-life-simulator/play.html")
             },
+            {
+                title: "Ball Blast",
+                imgSrc: "gameimg/ballBlast.jpg",
+                link: __uv$config.prefix + __uv$config.encodeUrl("https://7495375927555794559.playables.usercontent.goog/v/assets/index.html")
+            }
         ];
 
     const gamesList = document.getElementById("gamesList");
